change carousel images

--- a/404.html
+++ b/404.html
@@ -17,8 +17,9 @@ layout: default
   }
 </style>
 
-<div class="container">
-  <h1>404</h1>
+<div class="container mb-auto">
+  <img src="{{ site.baseurl }}/assets/images/404.jpg" alt="404 - page not found" style="max-width: 300px"/>
+  <!-- <h1>404</h1> -->
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
