add essayist and interviewee info; update styling for large screens; meow

--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@ vimeoID: 444606836
     </p>
   </div>
   <div class="col-sm-4 col-xl-12">
-    <div class="row justify-content-md-center">
+    <div class="row">
       <div class="col-xl-3 text-center my-1">
         <image style="width: 100%" src="{{ site.baseurl }}/assets/images/ar.gif"/>
       </div>
@@ -38,6 +38,7 @@ vimeoID: 444606836
 
 ---
 
+<div class="container-fluid">
 <div class="row">
   <div class="col-sm-8">
     <p>
@@ -50,16 +51,11 @@ vimeoID: 444606836
     "TVTV’s iconoclastic coverage of the events—brash interviews with the media and politicians alike, cameraman-interviewers, stylish graphics, and no voice-overs, in sum their own video version of <i>vérité</i>—garnered praise from jaded journalists and hipster critics alike," writes author <strong>Deirdre Boyle</strong>. "Their experimental TV tactics proved that a new style and energy had swept away the known world of network TV news."
     </p>
   </div>
-  <div class="col-sm-4 col-xl-12">
-    <div class="row justify-content-md-center">
-      <div class="col-xl-3 text-center my-1">
-        <image style="width: 100%" src="{{ site.baseurl }}/assets/images/nancy-skip-van.jpg"/>
-      </div>
-      <div class="col-xl-3 text-center my-1">
-        <image style="width: 100%" src="{{ site.baseurl }}/assets/images/shamberg-williams.jpg"/>
-      </div>
-    </div>
+  <div class="col-sm-4">
+    <image style="width: 100%" src="{{ site.baseurl }}/assets/images/nancy-skip-van.jpg"/>
+    <image style="width: 100%" src="{{ site.baseurl }}/assets/images/shamberg-williams.jpg"/>
   </div>
+</div>
 </div>
 
 ---
@@ -67,6 +63,8 @@ vimeoID: 444606836
 # About Some of TVTV's Members
 
 Between 1972 and 1977 the TVTV collective attracted and lost dozens of members, contributors, collaborators, and hangers-on. Some of these later became household names, and of the core members many went on to careers in Hollywood, academia, and the arts. Some of the core members of the group are listed here.
+
+<div class="container-fluid">
 
 <div class="row my-2">
   <div class="col-md-4">
@@ -190,15 +188,6 @@ Between 1972 and 1977 the TVTV collective attracted and lost dozens of members, 
   </div>
 </div>
 
-<div class="row my-2">
-  <div class="col-md-4">
-    <image style="width: 100%" src="{{ site.baseurl }}/assets/images/smokey.jpg"/>
-  </div>
-  <div class="col-md-8 text-right">
-    <h2>Smokey the cat</h2>
-    <p><i>Meow</i></p>
-  </div>
-</div>
 
 <div class="row my-2">
   <div class="col-md-4">
